Fix typos in feature engineering notebook

--- a/Feature Engineering(Day 18).ipynb
+++ b/Feature Engineering(Day 18).ipynb
@@ -15,10 +15,10 @@
    "metadata": {},
    "source": [
     "### 1. Feature explortion\n",
-    "The Process of analyzing and visualizing features to uncover patterns, distributions, correlations, and Pottential Issues in the data set before applying Machine Learning.\n",
+    "The Process of analyzing and visualizing features to uncover patterns, distributions, correlations, and Potential Issues in the data set before applying Machine Learning.\n",
     "\n",
     "### 2. Feature Creation\n",
-    "The Procress of generating new meaningful features from existing data using domain Knowledge features from existing data using domain knowledge or mathematical operations to help the model learn better patterns.\n",
+    "The Procress of generating new meaningful features from existing data using domain Knowledge or mathematical operations to help the model learn better patterns.\n",
     "\n",
     "### 3. Feature Encoding\n",
     "The Process of converting Categorical or non-numeric features into numeric form so machine learning models can process them effectively.\n",
