Update 07_Feature Encoding(Day 12).ipynb

--- a/07_Feature Encoding(Day 12).ipynb
+++ b/07_Feature Encoding(Day 12).ipynb
@@ -14,7 +14,7 @@
    "id": "dfc80c73-0dba-4ded-afff-e2ec74b3a404",
    "metadata": {},
    "source": [
-    "we choosee the encoding tewwchnique based on :-\n",
+    "we choose the encoding technique based on :-\n",
     "- The type of categorical data (nominal or ordinal),\n",
     "- The number of unique values in a catagorical columns, and the model we plan to train."
    ]
