--- a/19_Logistic Regression.ipynb
+++ b/19_Logistic Regression.ipynb
@@ -5,7 +5,7 @@
    "id": "c0ac47d7-5dc9-4511-a9aa-2c127333c56b",
    "metadata": {},
    "source": [
-    "# Logistic Regreesion\n",
+    "# Logistic Regression \n",
     "\n",
     "Logistic regression Is a supervised machine learning algorithm Use it for classification, Predicting The probability of a categorical outcome (like yes/no, spam/not spam) By fitting data into sigmoid(S-shaped curve, Which maps linear combinations features to probabilities between 0 and 1."
    ]
