Update 15_Overfitting and Underfitting.ipynb

--- a/15_Overfitting and Underfitting.ipynb
+++ b/15_Overfitting and Underfitting.ipynb
@@ -5,7 +5,7 @@
    "id": "54ed6c7d-0ba0-44e3-9ee9-a9bf2086a221",
    "metadata": {},
    "source": [
-    "# Model Evaluation"
+    "# Overfitting and Underfitting"
    ]
   },
   {
