--- a/01_Python Basics.ipynb
+++ b/01_Python Basics.ipynb
@@ -1,9 +1,56 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "ab1affec-aa2a-4086-8e6a-342ae79609e4",
+   "metadata": {},
+   "source": [
+    "# Python Basics\n",
+    "\n",
+    "1. Python is a programming language which is used to write logic part for application development.\n",
+    "2. Python is a general purpose, high-level, interpreted, dynamically typed and case-sensitive programming language.\n",
+    "3. General purpose programming language means by using python code we can develop any kind of applications.\n",
+    "4. High level programming means, while writing python script we no need to take memory management and security (low-level activities)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7823650b-9a32-4d81-b6f2-18d1f9e043d4",
+   "metadata": {},
+   "source": [
+    "## Application\n",
+    "\n",
+    "Python is widely used to build applications in modern technology domains such as:\n",
+    "\n",
+    "- **Artificial Intelligence (AI)** – expert systems, intelligent agents, chatbots\n",
+    "- **Machine Learning (ML)** – prediction systems, recommendation engines, classification models\n",
+    "- **Deep Learning (DL)** – image recognition, speech recognition, natural language processing\n",
+    "- **Internet of Things (IoT)** – sensor data processing, device automation, smart systems\n",
+    "- **Data Science & Analytics** – data analysis, visualization, and reporting tools\n",
+    "- **Web Applications** – backend development using frameworks like Flask and Django\n",
+    "- **Automation** – scripting and task automation\n",
+    "\n",
+    "Python acts as the core language that connects data, logic, and intelligent decision-making in these applications."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c157cdbb-9bc1-48e8-8a46-401eeec439a4",
+   "metadata": {},
+   "source": [
+    "## Features\n",
+    "\n",
+    "1. Simple and easy to learn  \n",
+    "2. Free and open source  \n",
+    "3. Platform independent  \n",
+    "4. Extensive libraries  \n",
+    "5. Large community support "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "61180c01-4c2e-44c4-bd43-114b3e12b574",
+   "id": "ab401480-2c44-4138-b29b-92d39431f59a",
    "metadata": {},
    "outputs": [
     {
@@ -20,8 +67,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "38bde9c9-2686-4276-958c-c7b315066445",
+   "execution_count": 2,
+   "id": "b4f1c4b3-27a5-47e6-9c7f-e6eaa339a1c0",
    "metadata": {},
    "outputs": [
     {
@@ -35,428 +82,594 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n\n"
+      "5\n"
      ]
     }
    ],
    "source": [
     "n=int(input(\"enter a number:\"))\n",
-    "print(\"n\")"
+    "print(n)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d72696ee-64e2-4d64-acbe-59de92d33f85",
+   "id": "c34175c9-d176-43d0-b0bc-517b94d0f0b4",
    "metadata": {},
    "source": [
-    "# If - else statement"
+    "## Variables in Python\n",
+    "\n",
+    "A variable is a name used to store data in memory.\n",
+    "In Python, variables are created when a value is assigned to them.\n",
+    "\n",
+    "Python does not require explicit declaration of variable types.\n",
+    "The type of a variable is determined automatically based on the value assigned.\n",
+    "\n",
+    "Variables are used to store:\n",
+    "- Input data\n",
+    "- Intermediate results\n",
+    "- Model parameters\n",
+    "- Output values\n",
+    "\n",
+    "**Syntax**\n",
+    "$$\n",
+    "\\text{var} \\, \\text{name} = \\text{value}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "cab473fb-4121-457e-9d94-2284f32f64c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "Alice\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Variable creation\n",
+    "x = 10\n",
+    "name = \"Alice\"\n",
+    "is_valid = True\n",
+    "\n",
+    "print(x)\n",
+    "print(name)\n",
+    "print(is_valid)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "748c6483-ff39-4a10-955a-7a7d39fd94dd",
+   "id": "2119b8e6-5268-4185-a6d4-ad643c26ab26",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "enter a number: 5\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "given number is positive\n"
+      "1 2 3\n"
      ]
     }
    ],
    "source": [
-    "n=int(input(\"enter a number:\"))\n",
-    "if n>0:\n",
-    "    print(\"given number is positive\")"
+    "# Multiple assignment\n",
+    "a, b, c = 1, 2, 3\n",
+    "\n",
+    "print(a, b, c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cae1adbc-412e-4666-a956-d65f4318ff09",
+   "metadata": {},
+   "source": [
+    "## Data Types in Python\n",
+    "\n",
+    "- Data types define the kind of data a variable can store. Python provides several built-in data types to represent different forms of information.\n",
+    "- Understanding data types is important because all programs, including machine learning systems, work by processing data of different types.\n",
+    "\n",
+    "### Main Categories of Data Types\n",
+    "\n",
+    "1. Numeric Types\n",
+    "2. Sequence Types\n",
+    "3. Boolean Type"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95b432e6-16e3-4082-8041-787ff4f6b982",
+   "metadata": {},
+   "source": [
+    "### 1. Numeric Types\n",
+    "\n",
+    "Numeric data types are used to store numerical values.\n",
+    "Python supports different kinds of numbers depending on how the data is represented.\n",
+    "\n",
+    "The main numeric types in Python are:\n",
+    "- **int**   : Whole numbers without a decimal point\n",
+    "- **float** : Numbers with a decimal point\n",
+    "- **complex** : Numbers with real and imaginary parts"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0ae99eb0-1171-4937-a05c-9f8ef7ad2f95",
+   "id": "bd2ec1e1-5579-4e65-a798-1c47c0218a01",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "enter a number: 5\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "given number is positive\n"
+      "10 <class 'int'>\n"
      ]
     }
    ],
    "source": [
-    "n=int(input(\"enter a number:\"))\n",
-    "if n>0:\n",
-    "    print(\"given number is positive\")\n",
-    "else:\n",
-    "    print(\"given number is negative\")"
+    "# Integer type\n",
+    "a = 10\n",
+    "b = -25\n",
+    "\n",
+    "print(a, type(a))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c1467b5b-e362-4502-8eff-b470cd28614c",
+   "id": "248ef01b-fbe9-4449-bd2a-ab3ae29f1792",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "enter a number: 5\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "given number is positive\n"
+      "3.14 <class 'float'>\n"
      ]
     }
    ],
    "source": [
-    "n=int(input(\"enter a number:\"))\n",
-    "if n>0:\n",
-    "    print(\"given number is positive\")\n",
-    "elif n<0:\n",
-    "    print(\"given number is negative\")\n",
-    "else:\n",
-    "    print(\"given number is zero\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a21bb402-085b-4d33-b1fc-b0c7b17c366a",
-   "metadata": {},
-   "source": [
-    "# Looping Statements"
+    "# Float type\n",
+    "x = 3.14\n",
+    "y = -0.001\n",
+    "\n",
+    "print(x, type(x))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3490208f-2fdd-4ff5-9528-4a3482b815de",
+   "id": "6f11df33-c1bb-4245-8fbb-b68017e8d898",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n"
+      "(2+3j) <class 'complex'>\n"
      ]
     }
    ],
    "source": [
-    "for i in range (0,5,1):\n",
-    "    print(i)"
+    "# Complex type\n",
+    "c1 = 2 + 3j\n",
+    "c2 = -5j\n",
+    "\n",
+    "print(c1, type(c1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3512890f-08c1-43e1-ae57-edbc2fd967a8",
+   "metadata": {},
+   "source": [
+    "### 2. Sequence Types\n",
+    "\n",
+    "Sequence data types are used to store collections of data.\n",
+    "They store multiple values in an ordered manner, where each element\n",
+    "can be accessed using an index.\n",
+    "\n",
+    "Common sequence data types in Python are:\n",
+    "- String (str)\n",
+    "- List (list)\n",
+    "- Tuple (tuple)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "974e245b-3f3a-4e39-9372-a986511bfcf0",
+   "metadata": {},
+   "source": [
+    "#### String\n",
+    "\n",
+    "A string is an ordered collection of characters enclosed in\n",
+    "single quotes (' '), double quotes (\" \"), or triple quotes (''' ''' or \"\"\" \"\"\")."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2aebe010-278b-4114-a8c9-c23cf3c20131",
+   "id": "3b90163a-7f08-4a43-9f44-a2d46abf7622",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "enter a number: 5\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n"
+      "Python\n"
      ]
     }
    ],
    "source": [
-    "n=int(input(\"enter a number:\"))\n",
-    "for i in range(0,(n+1)):\n",
-    "    print(i)"
+    "name = \"Python\"\n",
+    "\n",
+    "print(name)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1fab957c-93f5-41dc-9f65-0928e6f4e890",
+   "id": "486fbe49-b278-4298-9b35-db440d9b3309",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "enter a number: 5\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n"
+      "Machine Learning\n"
      ]
     }
    ],
    "source": [
-    "n=int(input(\"enter a number:\"))# while comdition\n",
-    "i=0\n",
-    "while(i<=n):\n",
-    "    print(i)\n",
-    "    i+=1"
+    "message = 'Machine Learning'\n",
+    "\n",
+    "print(message)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "eee4e9aa-c077-4572-ab00-641a6c52aa59",
+   "id": "5e1b7b91-f36f-4ae8-9d65-ea41baeb4aa4",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n"
+      "This is\n",
+      "a multiline string\n"
      ]
     }
    ],
    "source": [
-    "for i in range(5):#pass\n",
-    "    if i==3:\n",
-    "        pass\n",
-    "    print(i)"
+    "multiline = \"\"\"This is\n",
+    "a multiline string\"\"\"\n",
+    "\n",
+    "print(multiline)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42cdaa86-ac6b-46e3-a6b3-f05d4bdc9f2e",
+   "metadata": {},
+   "source": [
+    "#### List\n",
+    "\n",
+    "- A list is an ordered and mutable collection of elements.\n",
+    "- Lists allow duplicate values and can store different data types."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "2dcd2634-7e16-4733-aef8-142f76a54342",
+   "id": "b0e81f9f-5298-4f46-8f77-45be1bcb9bf4",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "4\n"
+      "[1, 2, 3, 4, 5]\n"
      ]
     }
    ],
    "source": [
-    "for i in range(5):#continue\n",
-    "    if i==3:\n",
-    "        continue\n",
-    "    print(i)"
+    "numbers = [1, 2, 3, 4, 5]\n",
+    "\n",
+    "print(numbers)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "95ef6d38-de8b-4257-9afa-3698293d05dd",
+   "id": "6ded035d-dd17-4592-a615-47005ede4a52",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "1\n",
-      "2\n"
+      "[10, 'AI', 3.14, True]\n"
      ]
     }
    ],
    "source": [
-    "for i in range(5):#break\n",
-    "    if i==3:\n",
-    "        break\n",
-    "    print(i)"
+    "mixed_list = [10, \"AI\", 3.14, True]\n",
+    "\n",
+    "print(mixed_list)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e2bbc9ea-667c-4989-a4fb-70163ed18c99",
+   "id": "b3aa3e8a-ab50-48c1-9ce9-bc0688aff7f6",
    "metadata": {},
    "source": [
-    "# List"
+    "#### Tuple\n",
+    "\n",
+    "- A tuple is an ordered and immutable collection of elements.\n",
+    "- Once created, the elements of a tuple cannot be modified."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "aae5a739-34be-475d-bbaf-2597f68c6f65",
+   "id": "e67357b1-8510-4060-97a8-b9b7e558ac1f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n"
+      "(10, 20)\n"
      ]
     }
    ],
    "source": [
-    "l=[]\n",
-    "print(l)"
+    "coordinates = (10, 20)\n",
+    "\n",
+    "print(coordinates)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "52c1b9ff-1bc0-4adb-9b6c-6c40a7e1e3a4",
+   "id": "c706899b-b5c3-4661-82dd-61580b3db346",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3, 5, 4]\n"
+      "('red', 'green', 'blue')\n"
      ]
     }
    ],
    "source": [
-    "l=[1,2,3,5,4]\n",
-    "print(l)"
+    "colors = (\"red\", \"green\", \"blue\")\n",
+    "\n",
+    "print(colors)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7dd8ea0-35d0-4351-86b3-974075d0f481",
+   "metadata": {},
+   "source": [
+    "### 3. Boolean Type\n",
+    "\n",
+    "The Boolean data type represents one of two values:\n",
+    "**True** or **False**.\n",
+    "\n",
+    "Boolean values are commonly used in:\n",
+    "- Decision making\n",
+    "- Conditions\n",
+    "- Comparisons\n",
+    "- Logical operations"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "5a2a773e-1915-41a0-9dc2-0c218c45e7f5",
+   "id": "a1abcbee-6db0-43be-bb13-213a75816663",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3, 5, 4, 6]\n"
+      "True\n",
+      "False\n"
      ]
     }
    ],
    "source": [
-    "l.append(6)\n",
-    "print(l)"
+    "# Boolean values\n",
+    "is_active = True\n",
+    "is_logged_in = False\n",
+    "\n",
+    "print(is_active)\n",
+    "print(is_logged_in)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7954cd44-df4b-4fbb-b188-7d1b45b13080",
+   "metadata": {},
+   "source": [
+    "## Type Casting in Python\n",
+    "\n",
+    "Type casting is the process of converting one data type into another.\n",
+    "Python allows explicit type conversion using built-in functions.\n",
+    "\n",
+    "Type casting is commonly used when:\n",
+    "- Taking input from the user\n",
+    "- Processing data\n",
+    "- Preparing data for calculations and machine learning models\n",
+    "\n",
+    "Python provides the following built-in functions for type casting:\n",
+    "\n",
+    "- int()   → converts data to integer\n",
+    "- float() → converts data to floating-point\n",
+    "- str()   → converts data to string\n",
+    "- bool()  → converts data to boolean"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dff86bec-cc77-4e72-b112-e7c61fbe3ca2",
+   "metadata": {},
+   "source": [
+    "**🔹 String to Integer / Float**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "dc9c8958-78e0-409e-a923-e2dc246b57dc",
+   "id": "00d25008-1ae8-4572-9c39-62d4ace41114",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3, 5, 4]\n"
+      "100\n",
+      "<class 'int'>\n"
      ]
     }
    ],
    "source": [
-    "l.pop()\n",
-    "print(l)"
+    "# String to integer\n",
+    "x = \"100\"\n",
+    "y = int(x)\n",
+    "\n",
+    "print(y)\n",
+    "print(type(y))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "3996562c-9ef3-455e-b6fb-dc394165edce",
+   "id": "50853004-02ee-489a-9b16-70fd0d29d51d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3, 4, 5]\n"
+      "12.5\n",
+      "<class 'float'>\n"
      ]
     }
    ],
    "source": [
-    "l.sort()\n",
-    "print(l)"
+    "# String to float\n",
+    "a = \"12.5\"\n",
+    "b = float(a)\n",
+    "\n",
+    "print(b)\n",
+    "print(type(b))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6397be1c-0c39-42c3-ab09-dac7cebf321c",
+   "metadata": {},
+   "source": [
+    "**🔹 Integer to Float**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "708fc664-b824-483f-b887-b3b1b69eac7e",
+   "id": "705240ea-1b97-49c5-af71-9bf1941e8af8",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3, 4, 5]\n"
+      "10.0\n",
+      "<class 'float'>\n"
      ]
     }
    ],
    "source": [
-    "print(l)"
+    "num = 10\n",
+    "result = float(num)\n",
+    "\n",
+    "print(result)\n",
+    "print(type(result))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "155db049-1489-40be-b4f4-49c3c2194c31",
+   "metadata": {},
+   "source": [
+    "**🔹 Number to String**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "387a7f78-6b0c-49fc-bf2a-61a9fb6ede0d",
+   "id": "89bdc63f-4054-4ed4-a3b5-eaa8c2b5a962",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n",
+      "<class 'str'>\n"
+     ]
     }
    ],
    "source": [
-    "l.count(5)"
+    "value = 25\n",
+    "text = str(value)\n",
+    "\n",
+    "print(text)\n",
+    "print(type(text))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b63a9e8-bb18-454b-ac85-0c3061042581",
+   "metadata": {},
+   "source": [
+    "**🔹 Boolean Type Casting**\n",
+    "\n",
+    "Boolean type casting converts values into True or False."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "19816e78-408a-4ad5-ad7b-363dd1a7c343",
+   "execution_count": 20,
+   "id": "83113c47-8a21-4b1e-9af0-ff2c610a8ea5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(bool(1))\n",
+    "print(bool(0))\n",
+    "print(bool(\"\"))\n",
+    "print(bool(\"AI\"))"
+   ]
   }
  ],
  "metadata": {
