--- a/30_K-Means Clustering.ipynb
+++ b/30_K-Means Clustering.ipynb
@@ -10,6 +10,8 @@
    "id": "e2eed690-86c7-4026-b892-53f068407ef0",
    "metadata": {},
    "source": [
+    "# K-Means Clustering\n",
+    "\n",
     "## What is Clustering?\n",
     "\n",
     "- **Clustering** is an **unsupervised learning technique** that groups similar data points into clusters **without using labeled data**.\n",
